--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -124,8 +124,13 @@
     }
   },
   "cSpell.words": [
+    "Bekuretsion",
+    "Mangal",
+    "Mustafa",
     "Samir",
     "Shaifta",
+    "Tadios",
+    "Taiwo",
     "Teststring"
   ]
 }
