--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -58,6 +58,9 @@ jobs:
       - name: python version
         run: python --version
         shell: bash
+      - name: Set PYTHONPATH
+        run: export PYTHONPATH=$PYTHONPATH:$(pwd)/solutions
+        shell: bash
       - name: Python - Run Tests
-        run: python -m unittest
+        run: python -m unittest discover -s solutions/tests -p "test_roman_to_int.py"
         shell: bash
