--- a/solutions/github/workflows/ci.yml
+++ b/solutions/github/workflows/ci.yml
@@ -1,6 +1,12 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   lint-and-format:
@@ -13,18 +19,18 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'  # Specify the Python version you need
+        python-version: '3.x' # Specify the Python version
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install black pylint markdownlint-cli
 
-    - name: Format code with black
-      run: black your_script.py
+    - name: Check code formatting with black
+      run: black --check your_script.py
 
-    - name: Lint code with pylint
+    - name: Lint Python code with pylint
       run: pylint your_script.py
 
-    - name: Check markdown formatting
+    - name: Lint Markdown files with markdownlint
       run: markdownlint **/*.md
