--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -51,13 +51,21 @@ jobs:
         run: "pylint solutions tests  || echo '::warning title=Pylint Error(s)::Discuss solutions and trade-offs in code review.'"
         shell: bash
 
+
   py_tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       
-      - name: python version
-        run: python --version
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+      
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
         shell: bash
       
       - name: Check for test files
@@ -72,6 +80,11 @@ jobs:
             echo "No test files found matching pattern ./solutions/tests/test_*.py"
             echo "has_tests=false" >> $GITHUB_OUTPUT
           fi
+        shell: bash
+      
+      - name: Run Tests
+        if: steps.check_tests.outputs.has_tests == 'true'
+        run: python -m unittest discover -s solutions/tests -p "test_*.py"
         shell: bash
       
       - name: Python - Run Tests
