--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -119,5 +119,8 @@
   ],
   "githubPullRequests.ignoredPullRequestBranches": [
     "main"
-  ]
+  ],
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter"
+  }
 }
