--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -112,15 +112,18 @@
     "editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
   },
 
+   //--------Python formatting ----------------
+  "[python]": {
+    "editor.defaultFormatter":"charliermarsh.ruff",
+    "editor.codeActionsOnSave": {
+      "source.organizeImports.ruff": "explicit",
+      "source.fixAll.ruff":"explicit",
+      "sourse.organizeImports.ruff":"explicit"
+    },
+
+    "editor.formatOnSave": true
+  },
+
   // Enable/disable update table of contents on save
   "markdown.extension.toc.updateOnSave": false,
-
-  "[python]": {
-    "editor.defaultFormatter": "charliermarsh.ruff",
-    "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": {
-      "source.fixAll.ruff": "explicit",
-      "source.organizeImports.ruff": "explicit"
-    }
-  }
 }
